# FastAPIServer

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py
app/api/: __init__.py  auth.py  files.py  misc.py  products.py  users.py
app/core/: config.py  security.py
app/models/: __init__.py
app/services/: product_service.py  user_service.py
tests/: test_main.py
